fix(styles): corregidos estilos que no funcionaban en dark mode

--- a/css/other-styles.css
+++ b/css/other-styles.css
@@ -14,22 +14,24 @@
     padding-bottom: 0.5rem;
 }
 /* ..BOTÓN MAIN-PAGE.. */
-#main-page{
-    background-color: var(--fontColorSecond);
-    color: rgb(255, 255, 255);
-    font-weight: bold;
-    width: 5rem;
-    height: 2.5rem;
-    margin: 10px;
-    border-radius: 5px;
-    border: none;
-    margin-top: -3px;    
-}
+
 
 #main-page:hover {
     color: #F5D601;
     border-color: #FFD523
 } 
+
+
+.theme--dark #main-page:hover {
+  color: #f5e7a9;
+}
+
+.theme--dark #btn-search:hover {
+  color: #f5e7a9;
+}
+
+
+
 /* ..LOADER.. */
 #loader-container {
     position: fixed;
